--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@headlessui/react": "^0.2.0",
     "next": "10.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss-named-groups": "0.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
